--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -553,7 +553,7 @@
         "name": "Nimi",
         "team": "Meeskond",
         "player_count": "Mängijate arv",
-        "rating_placement": "Asetus reitingus",
+        "rating_placement": "Asetus Reitingus",
         "class": "Klass",
         "nationality": "Riik",
         "foreign_player": "Välismängija",
