--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -579,6 +579,7 @@
       "yob": "Sünniaasta",
       "club": "Klubi",
       "subgroup": "Alagrupp",
+      "export": "Lae Alla",
       "filter": {
         "all_ratings": "Kõik reitingud",
         "rating_plus": "{{rating}}+",
@@ -1226,9 +1227,9 @@
         "type_placeholder": "Vali turniiri tüüp",
         "max_team_size": "Maksimaalne tiimi suurus",
         "private": "Privaatne turniir",
-        "private_description": "Muuda turniir ainult adminitele nähtavaks",
+        "private_description": "Muuda turniir ainult administraatoritele nähtavaks",
         "ranking": "Reitinguga turniir",
-        "ranking_description": "Reiting arvutatakse iga esmaspäeva hommikul",
+        "ranking_description": "Kas see turniir läheb reitingusse?",
         "team": "Meeskondadega turniir",
         "team_description": "Luba meeskondadega turniir",
         "main_bracket": "Põhiturniiri tabel",
