--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -1230,8 +1230,8 @@
         "private_description": "Muuda turniir ainult administraatoritele nähtavaks",
         "ranking": "Reitinguga turniir",
         "ranking_description": "Kas see turniir läheb reitingusse?",
-        "team": "Meeskondadega turniir",
-        "team_description": "Luba meeskondadega turniir",
+        "team": "Meeskondadega võistlusklass",
+        "team_description": "Paarismäng või võistkondlik",
         "main_bracket": "Põhiturniiri tabel",
         "main_bracket_placeholder": "Vali Põhitabeli formaat",
         "consolation_bracket": "Kas toimub ka lohutusturniir?",
