rating fix and other stuff

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -705,6 +705,8 @@
       "girls_u15": "Girls U15",
       "boys_u19": "Boys U19",
       "girls_u19": "Girls U19",
+      "boys_u21": "Boys U21",
+      "girls_u21": "Girls U21",
       "combined": "Combined"
     },
     "last_updated": "Last updated",
