--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -607,6 +607,7 @@
       "type": "Tüüp",
       "play_off": "Play-off",
       "group_match": "Tiimi matš",
+      "dates_all": "Kõik kuupäevad",
       "status": "Staatus",
       "status_completed": "Lõppenud",
       "status_pending": "Käimasolevad",
