standings, round robin placements, protocolexport for solo, timers for participants

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1605,6 +1605,7 @@
       "matches": {
         "completed": "Completed",
         "upcoming": "Upcoming",
+        "waiting": "Waiting",
         "table": {
           "bracket": "Bracket",
           "quarterfinal": "Quarterfinal",
