--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -663,7 +663,8 @@
       "gallery": "Galerii",
       "guide": "Juhend",
       "sponsors": "Sponsorid",
-      "media": "Meedia"
+      "media": "Meedia",
+      "search_player": "Otsi mängijat..."
     },
     "status": {
       "ended": "Turniir Lõppenud",
