--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1018,7 +1018,8 @@
         "blogs": "Blogs",
         "clubs": "Clubs",
         "feedback": "Feedback",
-        "export": "Data Export"
+        "export": "Data Export",
+        "rating": "Rating Management"
       },
       "info": "Settings",
       "schedule": "Schedule",
