--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -1040,7 +1040,8 @@
         "blogs": "Blogi & Uudised",
         "clubs": "Klubid",
         "feedback": "Tagasiside",
-        "export": "Andmete Eksport"
+        "export": "Andmete Eksport",
+        "rating": "Reitingu Haldus"
       },
       "info": "Info",
       "groups": "Võistlusklassid",
