--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1775,6 +1775,14 @@
         "website": "Website",
         "actions": "Actions"
       },
+      "image": {
+        "select_image": "Select image",
+        "upload_new": "Upload new image",
+        "upload": "Upload",
+        "uploading": "Uploading image...",
+        "upload_success": "Image uploaded successfully",
+        "upload_error": "Failed to upload image. Please try again."
+      },
       "dropdown": {
         "edit": "Edit",
         "delete": "Delete"
