rating export fixed for rating management

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1953,12 +1953,13 @@
       "calculated_at": "Calculated At",
       "player_name": "Player",
       "player_id": "ID",
-      "first_name": "First Name", 
+      "first_name": "First Name",
       "last_name": "Last Name",
       "algorithm": "Algorithm",
       "old_rating": "Rating",
       "new_rating": "Rating",
       "tournament": "Tournament",
+      "with_rating_only": "Only with rating",
       "status": {
         "success": "Success",
         "failed": "Failed",
