--- a/public/locales/et/translation.json
+++ b/public/locales/et/translation.json
@@ -1982,11 +1982,12 @@
       "player_name": "Mängija",
       "player_id": "ID",
       "first_name": "Eesnimi",
-      "last_name": "Perekonnanimi", 
-      "algorithm": "Algoritm", 
+      "last_name": "Perekonnanimi",
+      "algorithm": "Algoritm",
       "new_rating": "Reitingukoht",
       "change": "Muutus",
       "tournament": "Turniir",
+      "with_rating_only": "Ainult reitinguga",
       "status": {
         "success": "Edukas",
         "failed": "Ebaõnnestunud",
