--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -506,6 +506,7 @@
       "team_players": "Team players",
       "table": {
         "image": "Image",
+        "reg_status": "Confirmation",
         "name": "Name",
         "team": "Team",
         "player_count": "Players",
@@ -1505,6 +1506,7 @@
             "actions": "Actions",
             "nationality": "Country",
             "image": "Image",
+            "reg_status": "Confirmation",
             "foreign_player": "Foreigner"
           },
           "doubles": {
