last minute improvements

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -12,6 +12,10 @@
     "consolation": "Consolation",
     "subgroups": "Subgroups"
   },
+  "brackets": {
+    "plussring": "Main Bracket",
+    "miinusring": "Consolation"
+  },
   "navbar": {
     "language": {
       "estonian": "Estonian",
